# guth

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile.guth  Dockerfile.tch  README.md  flake.nix  pyproject.toml
.github/: act-local.md  dependabot.yml
.github/workflows/: ci.yml  container.yml  linux-packages.yml  publish-crate.yml  publish-package.yml  release.yml  run-tests.yml
docs/: README.md  burn-issues.md
guth/: Cargo.toml
guth/src/: config.rs  download.rs  lib.rs  main.rs  state.rs  weights.rs
guth/src/audio/: io.rs  resample.rs
guth/src/conditioner/: text.rs
guth/src/model/: flow_lm.rs  mimi.rs  mod.rs  tts.rs
guth/src/modules/: dummy_quantizer.rs  flow_net.rs  layer_scale.rs  linear.rs  mimi_transformer.rs  mod.rs  resample.rs  seanet.rs  streaming_conv.rs  streaming_mha.rs  transformer.rs
guth/tests/: backend_bench.rs  cli_audio.rs  cli_e2e.rs  edge_cases.rs  flow_lm_parity.rs  integration_tts.rs  mimi_parity.rs  ogg_decode.rs  parity.rs  sigint.rs  tts_parity.rs
guth/tests/common/: mod.rs
guth/tests/fixtures/: attention.json  attention_causal.json  backend_bench_config.yaml  conv1d.json  conv_transpose.json  flow_lm_model.json  generate_flow_lm_fixtures.py  generate_mimi_fixtures.py  generate_tts_fixtures.py  mimi_state.safetensors  rmsnorm.json  seanet_decoder.json  seanet_encoder.json  tokenizer.model  tokenizer.vocab  tokenizer_fixture.json  transformer_layer.json  tts_flow_lm_state.safetensors  tts_integration.json  tts_integration_config.yaml  tts_mimi_state.safetensors  tts_model.json  tts_state.safetensors  voice_ogg_fixture.json
pocket_tts/: default_parameters.py  main.py
pocket_tts/models/: tts_model.py
pocket_tts/modules/: transformer.py
pocket_tts/static/: index.html
pocket_tts/utils/: utils.py
scripts/coverage/: rust_coverage.sh
src/: config.rs  download.rs  lib.rs  main.rs  perf.rs  runtime.rs  state.rs  weights.rs
src/audio/: io.rs  mod.rs  resample.rs
src/conditioner/: mod.rs  text.rs
src/model/: flow_lm.rs  mimi.rs  mod.rs  tts.rs
src/modules/: dummy_quantizer.rs  flow_net.rs  layer_scale.rs  linear.rs  mimi_transformer.rs  mod.rs  resample.rs  seanet.rs  streaming_conv.rs  streaming_mha.rs  transformer.rs
tests/: backend_bench.rs  cli.rs  cli_e2e.rs  edge_cases.rs  flow_lm_parity.rs  integration_tts.rs  mimi_parity.rs  parity.rs  test_cli_generate.py  tts_parity.rs
tests/cli/: e2e.rs  metadata.rs
tests/common/: mod.rs
tests/fixtures/: attention_multihead.json  conv1d.json  dummy_quantizer.json  flow_lm_state.safetensors  flow_net.json  generate_tts_fixtures.py  mimi_model.json  tokenizer_corpus.txt  tts_integration.json  tts_mimi_state.safetensors  tts_model.json
tests/parity/: core.rs  flow_lm.rs  mimi.rs  tts.rs
