[package]
name = "guth"
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
description = "Fast CPU-optimized text-to-speech library using flow matching"
authors = ["Kyutai Labs"]
repository = "https://github.com/kyutai-labs/pocket-tts"
homepage = "https://github.com/kyutai-labs/pocket-tts"
documentation = "https://docs.rs/guth"
keywords = ["tts", "text-to-speech", "audio", "machine-learning"]
categories = ["multimedia::audio", "science"]
readme = "README.md"
exclude = [
    "tests/fixtures/*.json",
    "tests/fixtures/*.py",
    "python/",
    "voices/",
    "docs/",
    "scratch/",
]

[lib]
name = "guth"
path = "src/lib.rs"

[[bin]]
name = "guth"
path = "src/main.rs"

[dependencies]
burn = { version = "0.20.1", features = ["ndarray"] }
burn-nn = "0.20.1"
burn-ndarray = "0.20.1"
burn-cpu = { version = "0.20.1", optional = true }
burn-wgpu = { version = "0.20.1", optional = true, default-features = false, features = ["std", "fusion", "vulkan"] }
env_logger = "0.11"
safetensors = "0.4"
hf-hub = { version = "0.4", default-features = false, features = ["ureq", "rustls-tls"] }
sentencepiece = "0.13.1"
hound = "3.5"
rubato = "0.15"
lewton = "0.10"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
rand = "0.8"
anyhow = "1"
tracing = "0.1"
ctrlc = "3"
ureq = { version = "2", default-features = false, features = ["rustls", "gzip"] }

[dev-dependencies]
proptest = "1"
tempfile = "3"
serde_json = "1"
nix = { version = "0.28", default-features = false, features = ["signal"] }

[features]
default = ["backend-wgpu"]
backend-cpu = ["burn-cpu"]
backend-ndarray = []
backend-wgpu = ["burn-wgpu"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.zip"
pkg-fmt = "zip"

[package.metadata.deb]
maintainer = "Kyutai Labs <contact@kyutai.org>"
copyright = "2024-2025, Kyutai Labs"
license-file = ["LICENSE", "0"]
extended-description = """\
guth is a fast, CPU-optimized text-to-speech CLI using flow matching. \
It supports streaming generation, voice cloning, and runs efficiently \
without requiring a GPU."""
depends = "$auto"
section = "sound"
priority = "optional"
assets = [
    ["target/release/guth", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/guth/", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/guth", dest = "/usr/bin/guth", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/guth/README.md", mode = "644" },
]
